[tool.poetry]
name = "chatgpt4-telegram"
version = "0.1.0"
description = ""
authors = ["S1avv <code.launchx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
g4f = "^0.2.0.3"
aiogram = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
